Button alignment issue resolved

--- a/css/index.css
+++ b/css/index.css
@@ -159,7 +159,7 @@ h5 {
 }
 .container {
   max-width: 880px;
-  width: 100%;
+  width: 98%;
   margin: auto;
 }
 header {
@@ -273,7 +273,16 @@ header .logo {
 }
 .main-content .top-content {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+}
+.main-content .top-content h4 {
+  padding-top: 10px;
+}
+.main-content .top-content .text-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 .main-content .top-content .text-content .btn {
   margin-top: 20px;
@@ -306,6 +315,12 @@ header .logo {
 }
 .main-content .bottom-content h4 {
   margin-top: 15px;
+}
+.main-content .bottom-content .text-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 .main-content .bottom-content .text-content .btn {
   margin-top: 20px;
