--- a/less/general-styles.less
+++ b/less/general-styles.less
@@ -22,6 +22,6 @@ h5 {
 
 .container {
   max-width: 880px;
-  width: 100%;
+  width: 98%;
   margin: auto;
 }
