--- a/less/main-content.less
+++ b/less/main-content.less
@@ -11,9 +11,15 @@
 
   .top-content {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+
+    h4 {
+      padding-top: 10px;
+    }
 
     .text-content {
+      .center();
+      flex-direction: column;
       .btn {
         margin-top: 20px;
         .center;
@@ -46,6 +52,8 @@
       margin-top: 15px;
     }
     .text-content {
+      .center();
+      flex-direction: column;
       .btn {
         margin-top: 20px;
         .center;
